experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/468/log-1-468.log

Test.java:130: error: incompatible types: possible lossy conversion from int to short
                    s5 = i17;
                         ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

